# Spotify-Recomendation-Machine-Learning

./: .gitignore  CODEOWNERS  README.md  pyproject.toml  requirements.txt  session_store.db
.viz/: stats.json
conf/base/: catalog.yml
data/06_models/: modelo_lineal_diego_1.pkl
notebooks/: 1. Business Understanding.ipynb  3. Data Preparation.ipynb  4. Regression (Test).ipynb  4. Regression2.ipynb  4. Regretion (Test).ipynb  5. Joaquin .ipynb  5. Modelos No Supervisados.ipynb  5. nose.ipynb  Classification Model.ipynb  Regression-Carlos.ipynb  Regression-Joaquin.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/machine_learning/: __init__.py  __main__.py  nodes.py  pipeline_registry.py
src/machine_learning/pipelines/: __init__.py  pipelines.py
