[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "machine_learning"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
machine-learning = "machine_learning.__main__:main"

[tool.kedro]
package_name = "machine_learning"
project_name = "Machine Learning"
kedro_init_version = "0.19.8"
tools = [ "Kedro Viz",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "machine_learning.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "12086e8f41af4c2a9e8eec558d92ce77"
